# netease-music

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: test_ui.rs
src/: client.rs  crypto.rs  error.rs  lib.rs  ncbl.rs  request.rs  types.rs
src/services/: mod.rs
tests/: client_request.rs
